Collection API Улучшения[#216017]