@@ -2,10 +2,7 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -13,10 +10,12 @@ import static org.junit.Assert.*;
 public class FullSearchTest {
     @Test
     public void extractNumber() {
-        List<Task> tasks = Arrays.asList(
-                new Task("1", "First desc"),
-                new Task("2", "Second desc"),
-                new Task("1", "First desc")
+        List<Task> tasks = new ArrayList<>(
+                List.of(
+                        new Task("1", "First desc"),
+                        new Task("2", "Second desc"),
+                        new Task("1", "First desc")
+                )
         );
         Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
         assertThat(FullSearch.extractNumber(tasks), is(expected));
