@@ -1,15 +1,18 @@
 package ru.job4j.lambda;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
 public class AttachmentSort {
     public static void main(String[] args) {
-        List<Attachment> attachments = Arrays.asList(
-                new Attachment("image 1", 100),
-                new Attachment("image 2", 34),
-                new Attachment("image 3", 13)
+        List<Attachment> attachments = new ArrayList<>(
+                List.of(
+                        new Attachment("image 1", 100),
+                        new Attachment("image 2", 34),
+                        new Attachment("image 3", 13)
+                )
         );
 
         Comparator cmpBySize = new Comparator() {
